# DRF

./: .env.sample  docker-compose.yaml  group_m.json  groups.json  payment.json  pyproject.toml  users_data.json
DRF/: settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_alter_lesson_course.py  0004_alter_lesson_course.py  0005_course_owner_lesson_owner.py  0006_subscription.py
users/: admin.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id_payment_status.py
